aether-master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aether-master-service
  namespace: aether
  labels:
    app: aether-master
spec:
  selector:
    app: aether-master
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8000
