aether-master/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aether-master-ingress
  namespace: aether
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-aether-master.rsupkandou.com
    http:
      paths:
      - backend:
          service:
            name: aether-master-service
            port:
              number: 8080
        path: /
        pathType: Prefix
